# 2DoFs_MPC

./: CMakeLists.txt  LICENSE
include/: GRU.h  LSTM.h  controller.h  custommath.h  quadraticprogram.h  robotmodel.h  test.h  trajectory.h
libraries/mujoco/simulate/: simulate.cc
libraries/rbdl/: CMakeLists.txt
model/: arm26.xml  dualarm_hands.xml  dualarm_hands_mod.urdf  dualarm_hands_mod_sim copy.xml  dualarm_hands_mod_sim.urdf  dualarm_hands_mod_sim.xml  dualarm_mod.xml  ren2.urdf
model/KIST_MAHRU-WL/: KIST MAHRU-WL_w_Battery copy.xml  KIST MAHRU-WL_w_Battery.old.xml  KIST MAHRU-WL_w_Battery.urdf  KIST MAHRU-WL_w_Battery.xml  KIST MAHRU-WL_wo_Battery copy.urdf  KIST MAHRU-WL_wo_Battery copy.xml  KIST_MAHRU-WL_wo_Battery.urdf  KIST_MAHRU-WL_wo_Battery.xml  KIST_MAHRU-WL_wo_Battery_fixed.xml  MAHRU-TWL.urdf  MAHRU-WL.xml  Metallic Color RGB.txt
model/KIST_MAHRU-WL/Meshes/: Cover.STL  Head.STL  LA1.STL  LA3.STL  LL2.STL  LL3.STL  LL4.STL  LW.STL  RA1.STL  RA3.STL  RA4.STL  RL2.STL  RL3.STL  RL4.STL  RW.STL  ToeWheel.STL  base_link.STL
model/KIST_MAHRU-WL/Property/: ReMahruURDF.csv  ReMahruURDF.urdf  ReMahruURDF.xlsx
model/meshes/: Hand_RF1J1.STL  Hand_RF1J2.STL  Hand_RF1J3.STL  Hand_RF1J4.STL  Hand_RF2J1.STL  Hand_RF2J2.STL  Hand_RF2J3.STL  Hand_RF2J4.STL  Hand_RF3J1.STL  Hand_RF3J2.STL  Hand_RF3J3.STL  Hand_RF3J4.STL  Hand_RT1.STL  Hand_RT2.STL  Hand_RT3.STL  Hand_RT4.STL  LShR_Link.STL  LShY_Link.STL  LWrR_Link.STL  RElP_Link.STL  RHandbase_Link.STL  RShR_Link.STL  RWrR_Link.STL  base_link.STL  body_link.STL
model/meshes/collision/: finger.stl  link6.stl
model/meshes/visual/: finger_.stl  link1_.stl  link2_.stl  link3_.stl  link5_.stl  link6_.stl
model/meshes2/: LElP_Link.STL  LShP_Link.STL  LWrP_Link.STL  LWrY_Link.STL  RShP_Link.STL  RShY_Link.STL  RWrP_Link.STL  RWrY_Link.STL
model/panda/: panda.urdf  panda.xml
model/panda/meshes/collision/: hand.stl  link0.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link7.stl
model/panda/meshes/visual/: hand_.stl  link0_.stl  link4_.stl
mujoco-2.3.2/simulate/: main.cc
src/: a  aa  controller.cpp  controller_paper.cpp  main.cc  plot.py  quadraticprogram.cc  robotmodel.cpp  test.cpp  test_backup_0731.cpp  test_bakcup_0728.cpp  test_del_tau copy.cpp  test_del_tau.cpp  test_dynamics.cpp  test_goal.cpp  test_goal_Cd.cpp  test_qddot.cpp  test_qddot_goal.cpp  trajectory.cpp
